# umsebenzi-cli

./: Cargo.toml  README.md  umsebenzi.toml
.github/workflows/: rust.yml
src/: config.rs  defaults.rs  description.rs  enums.rs  main.rs  project.rs  request.rs  response.rs  service.rs  task.rs
