[package]
name = "umsebenzi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1.0"
url = "2.5.2"
reqwest= {version = "0.12.9", features = ["json", "blocking"]}
cli-table = "0.4.9"
colored = "3"
